force-app/main/default/objects/PS_Price__c/PS_Price__c.object-meta.xml
<CustomObject>
    <label>PS Price</label>
    <nameField>
        <label>PS_Price</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PS Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>