force-app/main/default/objects/PS_Price__c/fields/Non_Discountable_Lot_Charge__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Lot_Charge__c</fullName>
    <label>Non Discountable Lot Charge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>