force-app/main/default/objects/PS_Price__c/fields/Non_Discountable_Lot_Charge_Override__c.field-meta.xml
<CustomField>
    <fullName>Non_Discountable_Lot_Charge_Override__c</fullName>
    <label>Non Discountable Lot Charge Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>