force-app/main/default/objects/PS_Price__c/fields/QuantityLL__c.field-meta.xml
<CustomField>
    <fullName>QuantityLL__c</fullName>
    <label>QuantityLL (&gt;=)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>