force-app/main/default/objects/PS_Price__c/fields/QuantityUL__c.field-meta.xml
<CustomField>
    <fullName>QuantityUL__c</fullName>
    <label>QuantityUL (&lt;)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>